--- a/free-nodes/page-3.htm
+++ b/free-nodes/page-3.htm
@@ -110,6 +110,81 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-21">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-21-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 4月21日19.3M/S|免费VPN/Clash/V2ray/SSR/Shadowrocket免费节点订阅分享" src="/uploads/20241222-1/aa3ddc9bff6fda25db17c202e775086f.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-21-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 4月21日19.3M/S|免费VPN/Clash/V2ray/SSR/Shadowrocket免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了加拿大、新加坡、日本、美国、香港、韩国、欧洲等地区,最高速度可达19.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-20">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-20-node-share.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 4月20日21.1M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享" src="/uploads/20241222-1/8d67d6a7bd5b99658b08a2aefb0804ae.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-20-node-share.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 4月20日21.1M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、香港、新加坡、美国、韩国、日本、加拿大等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-19">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-19-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 4月19日20.8M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享" src="/uploads/20241222-1/35f2ca1dcee5e084eaf1ccbd9a4339cc.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-19-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 4月19日20.8M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了日本、欧洲、新加坡、加拿大、美国、韩国、香港等地区,最高速度可达20.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-18">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-18-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 4月18日22M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享" src="/uploads/20241222-1/5f167ecea9a0c5eda7bc8fa7798e5773.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-18-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 4月18日22M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了韩国、欧洲、日本、加拿大、新加坡、美国、香港等地区,最高速度可达22 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-17">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-17-node-share.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 4月17日20.5M/S|免费VPN/Clash/Shadowrocket/V2ray/SSR免费节点订阅分享" src="/uploads/20241222-1/3e06145ef3df4476540f41e96f63345f.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-17-node-share.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 4月17日20.5M/S|免费VPN/Clash/Shadowrocket/V2ray/SSR免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了新加坡、美国、韩国、加拿大、日本、欧洲、香港等地区,最高速度可达20.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-04-16">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-4-16-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
@@ -185,83 +260,8 @@
                                     这一次的节点更新覆盖了韩国、新加坡、日本、加拿大、美国、香港、欧洲等地区,最高速度可达18.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-04-11">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-4-11-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 4月11日18.1M/S|免费VPN/Clash/Shadowrocket/V2ray/SSR免费节点订阅分享" src="/uploads/20241222-1/c3c6a54ea49b309f84ab33c220f79ae0.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-4-11-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        VPN设备 | 4月11日18.1M/S|免费VPN/Clash/Shadowrocket/V2ray/SSR免费节点订阅分享                                    </h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了美国、韩国、新加坡、欧洲、加拿大、香港、日本等地区,最高速度可达18.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-04-10">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-4-10-free-subscribe-node.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 4月10日18.7M/S|免费VPN/Clash/V2ray/Shadowrocket/SSR免费节点订阅分享" src="/uploads/20241222-1/321988b62eb0968a443ca3848a3f071f.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-4-10-free-subscribe-node.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        VPN设备 | 4月10日18.7M/S|免费VPN/Clash/V2ray/Shadowrocket/SSR免费节点订阅分享                                    </h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了日本、欧洲、美国、新加坡、香港、韩国、加拿大等地区,最高速度可达18.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-04-09">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-4-9-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 4月9日21M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享" src="/uploads/20241222-1/410b34121b845fee70063f582f79928f.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-4-9-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        VPN设备 | 4月9日21M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享                                    </h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了加拿大、香港、日本、欧洲、韩国、新加坡、美国等地区,最高速度可达21 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-04-08">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-4-8-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 4月8日21.4M/S|免费VPN/Shadowrocket/Clash/V2ray/SSR免费节点订阅分享" src="/uploads/20241222-1/253352ea5161b569846edfcc6423bfa1.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-4-8-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        VPN设备 | 4月8日21.4M/S|免费VPN/Shadowrocket/Clash/V2ray/SSR免费节点订阅分享                                    </h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了美国、日本、韩国、新加坡、加拿大、香港、欧洲等地区,最高速度可达21.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-04-07">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-4-7-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 4月7日20.2M/S|免费VPN/V2ray/SSR/Shadowrocket/Clash免费节点订阅分享" src="/uploads/20241222-1/8d67d6a7bd5b99658b08a2aefb0804ae.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-4-7-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        VPN设备 | 4月7日20.2M/S|免费VPN/V2ray/SSR/Shadowrocket/Clash免费节点订阅分享                                    </h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了新加坡、欧洲、日本、香港、美国、加拿大、韩国等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
                         
-                        <ul class="pagination"><li><a href="/free-nodes/page-2.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="active"><span>3</span></li><li><a href="/free-nodes/page-4.htm">4</a></li> <li><a href="/free-nodes/page-4.htm">&raquo;</a></li></ul>                    </div>
+                        <ul class="pagination"><li><a href="/free-nodes/page-2.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="active"><span>3</span></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li> <li><a href="/free-nodes/page-4.htm">&raquo;</a></li></ul>                    </div>
                 </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
@@ -270,16 +270,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-88500.htm" title="上海宠物领养站电话地址（上海宠物领养站电话地址是多少）">上海宠物领养站电话地址（上海宠物领养站电话地址是多少）</a></li>
-                        <li class="py-2"><a href="/news/article-87041.htm" title="兽药安泰又叫什么（兽药安泰又叫什么名字）">兽药安泰又叫什么（兽药安泰又叫什么名字）</a></li>
-                        <li class="py-2"><a href="/news/article-100352.htm" title="使用类在C ++中实现矢量数量">使用类在C ++中实现矢量数量</a></li>
-                        <li class="py-2"><a href="/news/article-87754.htm" title="宠物店亏本了怎么办（现在宠物店生意亏死）">宠物店亏本了怎么办（现在宠物店生意亏死）</a></li>
-                        <li class="py-2"><a href="/news/article-108337.htm" title="狂犬疫苗从动物提取的和人体提取的有何区别（狂犬疫苗从动物提取的和人体提取的有何区别呢）">狂犬疫苗从动物提取的和人体提取的有何区别（狂犬疫苗从动物提取的和人体提取的有何区别呢）</a></li>
-                        <li class="py-2"><a href="/news/article-98793.htm" title="Spring Boot Web项目ConcurrentLinkedQueue+ReentrantLock+Condition实现消费者功能(类似MQ队列)">Spring Boot Web项目ConcurrentLinkedQueue+ReentrantLock+Condition实现消费者功能(类似MQ队列)</a></li>
-                        <li class="py-2"><a href="/news/article-109989.htm" title="属什么的不能养猫（什么属相不能养猫养猫有什么禁忌）">属什么的不能养猫（什么属相不能养猫养猫有什么禁忌）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-28-node-share-links.htm" title="VPN设备 | 4月28日18.5M/S|免费VPN/Clash/Shadowrocket/V2ray/SSR免费节点订阅分享">VPN设备 | 4月28日18.5M/S|免费VPN/Clash/Shadowrocket/V2ray/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-104980.htm" title="包含领养宠物的平台软件哪个好的词条">包含领养宠物的平台软件哪个好的词条</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-3-free-v2ray.htm" title="VPN设备 | 5月3日19.8M/S|免费VPN/Clash/Shadowrocket/SSR/V2ray免费节点订阅分享">VPN设备 | 5月3日19.8M/S|免费VPN/Clash/Shadowrocket/SSR/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-26-free-node-subscribe.htm" title="VPN设备 | 4月26日18.4M/S|免费VPN/SSR/Shadowrocket/Clash/V2ray免费节点订阅分享">VPN设备 | 4月26日18.4M/S|免费VPN/SSR/Shadowrocket/Clash/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-97348.htm" title="快手上的拼多多电商是真的吗（拼多多上快手带货是真的吗）">快手上的拼多多电商是真的吗（拼多多上快手带货是真的吗）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-1-free-v2ray.htm" title="VPN设备 | 4月1日22.4M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享">VPN设备 | 4月1日22.4M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-98119.htm" title="宠爱国际动物园怎么样 宠爱国际动物医院怎么样">宠爱国际动物园怎么样 宠爱国际动物医院怎么样</a></li>
+                        <li class="py-2"><a href="/news/article-104052.htm" title="动物医院管理软件有哪些（动物医院系统哪个好）">动物医院管理软件有哪些（动物医院系统哪个好）</a></li>
+                        <li class="py-2"><a href="/news/article-101745.htm" title="领养猫咪签协议是什么意思（领养猫签协议啥意思）">领养猫咪签协议是什么意思（领养猫签协议啥意思）</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-4-13-free-node-subscribe-links.htm" title="VPN设备 | 4月13日19.9M/S|免费VPN/Shadowrocket/Clash/SSR/V2ray免费节点订阅分享">VPN设备 | 4月13日19.9M/S|免费VPN/Shadowrocket/Clash/SSR/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-89955.htm" title="宠物粮食加工厂设备哪的好点呢知乎 宠物粮食加工厂设备哪的好点呢知乎">宠物粮食加工厂设备哪的好点呢知乎 宠物粮食加工厂设备哪的好点呢知乎</a></li>
-                        <li class="py-2"><a href="/news/article-94458.htm" title="猫抓多久过安全期打疫苗（猫抓过多久没事才安全）">猫抓多久过安全期打疫苗（猫抓过多久没事才安全）</a></li>
                     </ul>
     </div>
 </div>
@@ -291,7 +291,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                <h4><span class="badge" style="float: right;">19</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">90</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
